# fontagit

./: .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml
.serena/: project.yml
apps/pipeline/: .dockerignore  Dockerfile  pyproject.toml
apps/pipeline/src/fontagit_pipeline/: __init__.py  __main__.py  audit_bootstrap.py  audit_http.py  audit_license.py  audit_manifest.py  audit_metadata.py  audit_models.py  audit_noonnu.py  audit_policy.py  audit_runner.py  audit_store.py  client.py  config.py  korean_names.py  licenses.py  models.py  noonnu_enrich.py  noonnu_import.py  noonnu_publish.py  noonnu_review.py  noonnu_seed.py  ofl_verify.py  transform.py  uploader.py  writer.py
apps/pipeline/src/fontagit_pipeline/data/: korean_names.json  license_rules.json  source_registry.json
apps/pipeline/tests/: test_audit_bootstrap.py  test_audit_http.py  test_audit_license.py  test_audit_manifest.py  test_audit_metadata.py  test_audit_noonnu.py  test_audit_policy.py  test_audit_resolver.py  test_audit_review_cli.py  test_audit_runner.py  test_audit_store.py  test_bootstrap_apply_cli.py  test_client.py  test_config.py  test_korean_names.py  test_licenses.py  test_main.py  test_models.py  test_noonnu_enrich.py  test_noonnu_import.py  test_noonnu_publish.py  test_noonnu_review.py  test_noonnu_seed.py  test_ofl_verify.py  test_task3_integration.py  test_transform.py  test_uploader.py  test_writer.py
apps/pipeline/tests/fixtures/: gh_tree_ofl.json  noonnu_auto.html  noonnu_conditional.html  webfonts_sample.json
apps/pipeline/tests/fixtures/audit/: link-observations.json  (+2 more)
(+424 files in other folders)
